was fixed some little bugs and added comments

--- a/ex4_Configuration/ex4_Configuration.csproj
+++ b/ex4_Configuration/ex4_Configuration.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="bin\Debug\net5.0\conf.ini" />
+    <Folder Include="bin\Debug\net5.0\" />
   </ItemGroup>
 
 </Project>
