--- a/ex4_Configuration/ex4_Configuration.csproj
+++ b/ex4_Configuration/ex4_Configuration.csproj
@@ -8,4 +8,10 @@
     <Folder Include="bin\Debug\net5.0\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="conf.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
